# Stellar-IndigoPay

./: .gitignore  .spectral.yaml  CHANGELOG.md  FUZZ_FINDINGS.md  PR_DESCRIPTION_124.md  PR_DESCRIPTION_128.md  PR_DESCRIPTION_130.md  PR_DESCRIPTION_132.md  PR_DESCRIPTION_239.md  PR_DESCRIPTION_240.md  PR_DESCRIPTION_243.md  PR_DESCRIPTION_251.md  PR_DESCRIPTION_253.md  PR_DESCRIPTION_254.md  PR_DESCRIPTION_377.md  PR_DESCRIPTION_379.md  PR_DESCRIPTION_382.md  PR_DESCRIPTION_383.md  PR_DESCRIPTION_83.md  README.md  ROADMAP.md  docker-compose.test.yml  drizzle.config.ts  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-migration-check.js  tsconfig.json
.pr-triggers/: feature-donate-ui-overhaul.md  feature-matching-pool.md  feature-metrics.md  feature-oracle.md
backend/: .env.example  .eslintrc.json  Dockerfile  drizzle.config.ts  eslint_report.json  jest.config.js  package-lock.json  package.json  swagger.yaml  test-setup.js  tsconfig.build.json  tsconfig.json
contracts/: Cargo.toml  EVENTS.md  README.md
contracts/attestation-contract/: Cargo.toml
contracts/attestation-contract/src/: lib.rs
contracts/escrow-contract/: Cargo.toml
contracts/escrow-contract/src/: lib.rs
contracts/escrow-contract/test_snapshots/tests/: release_missing_job_panics.1.json
contracts/escrow-contract/tests/: claim.rs  create_job.rs  dispute.rs  multi_token.rs  release_escrow.rs
contracts/escrow-contract/tests/common/: mod.rs
contracts/indigopay-contract/: .tarpaulin.toml  Cargo.toml  OPTIMIZATION.md  ORACLE.md  README.md  SECURITY.md  UPGRADE.md  VERIFICATION.md
contracts/indigopay-contract/fuzz_corpus/: .gitkeep
contracts/indigopay-contract/proptest-regressions/: fuzz_tests.txt
contracts/indigopay-contract/src/: fuzz_template.rs  fuzz_tests.rs  lib.rs
contracts/indigopay-contract/src/donation/: contract.rs  events.rs  storage.rs  types.rs
contracts/indigopay-contract/verification/kani/: Cargo.toml
contracts/indigopay-contract/verification/kani/src/: lib.rs
docs/: README.md  api.md  architecture.md  database.md  disaster-recovery.md  external-secrets.md  indexer.md  performance.md  restore-runbook.md
extension/: jest.config.js  jest.setup.js  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
frontend/: .env.example  .eslintrc.json  .nextignore  Dockerfile  jest-axe.d.ts  jest.config.js  jest.setup.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
gitops/: argo-rollouts-canary.yaml
k8s/: configmap.yaml  external-secret.yaml  kustomization.yaml  secret.yaml  (+5 more)
(+752 files in other folders)
