[package]
name = "indigopay-contract"
version = "0.1.0"
edition = "2021"
description = "Stellar IndigoPay — Soroban smart contract for transparent climate donations"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "27.0.0"

[dev-dependencies]
soroban-sdk = { version = "27.0.0", features = ["testutils"] }
proptest = "1.4"

[features]
default = ["delegation", "recurring", "refund", "governance", "emergency", "upgrade", "usdc", "campaign", "donation", "impact"]
testutils = ["soroban-sdk/testutils"]
delegation = []
recurring = []
refund = []
governance = ["delegation"]
emergency = []
upgrade = []
usdc = []
campaign = []
donation = []
zk = []
vesting = []
fees = []
impact = []

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
