[package]
name = "indigopay-verification-kani"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
indigopay-contract = { path = "../.." }

# `kani` is injected by `cargo kani` at compile time — it is NOT
# resolved from crates.io (the crates.io `kani` crate is a placeholder).
# Do NOT add `kani` here as a regular dependency.
